Optimize vector bytecode immediate ops